News for the tz database


Unreleased, experimental changes

  Changes affecting documentation and commentary

    The README file is now part of the data tarball as well as the code.
    It now states that files are public domain unless otherwise specified.
    Its details about the 1989 release moved to a place of honor near
    the end of NEWS.


Release 2013f - 2013-09-24 23:37:36 -0700

  Changes affecting near-future time stamps

    Tocantins will very likely not observe DST starting this spring.
    (Thanks to Steffen Thorsen.)

    Jordan will likely stay at UTC+3 indefinitely, and will not fall
    back this fall.

    Palestine will fall back at 00:00, not 01:00.  (Thanks to Steffen Thorsen.)

  Changes affecting API

    The types of the global variables 'timezone' and 'altzone' (if present)
    have been changed back to 'long'.  This is required for 'timezone'
    by POSIX, and for 'altzone' by common practice, e.g., Solaris 11.
    These variables were originally 'long' in the tz code, but were
    mistakenly changed to 'time_t' in 1987; nobody reported the
    incompatibility until now.  The difference matters on x32, where
    'long' is 32 bits and 'time_t' is 64.  (Thanks to Elliott Hughes.)

  Changes affecting the build procedure

    Avoid long strings in leapseconds.awk to work around a mawk bug.
    (Thanks to Cyril Baurand.)

  Changes affecting documentation and commentary

    New file 'NEWS' that contains release notes like this one.

    Paraguay's law does not specify DST transition time; 00:00 is customary.
    (Thanks to Waldemar Villamayor-Venialbo.)

    Minor capitalization fixes.

  Changes affecting version-control only

    The experimental github repository now contains annotated and
    signed tags for recent releases, e.g., '2013e' for Release 2013e.
    Releases are tagged starting with 2012e; earlier releases were
    done differently, and tags would either not have a simple name or
    not exactly match what was released.
